--- a/packages/infrastructure/package.json
+++ b/packages/infrastructure/package.json
@@ -7,6 +7,7 @@
     "@aws-sdk/client-dynamodb": "^3.583.0",
     "@aws-sdk/client-eventbridge": "^3.583.0",
     "@aws-sdk/client-sns": "^3.583.0",
+    "@aws-sdk/lib-dynamodb": "^3.873.0",
     "@aws-sdk/util-dynamodb": "^3.583.0",
     "awilix": "^10.0.1",
     "mysql2": "^3.9.7",
