--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "Backend for Medical Appointment Scheduling",
   "scripts": {
     "context": "node scripts/generate-context.js",
+    "docs:generate": "ts-node scripts/generate-openapi.ts",
     "build": "tsc --build",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -16,6 +17,7 @@
   "devDependencies": {
     "@types/jest": "^30.0.0",
     "@types/node": "^24.3.0",
+    "@types/swagger-ui-express": "^4.1.8",
     "esbuild": "^0.25.9",
     "eslint": "^9.33.0",
     "eslint-config-prettier": "^10.1.8",
@@ -28,9 +30,11 @@
     "serverless-offline": "^14.4.0",
     "serverless-offline-sns": "^0.78.1",
     "serverless-offline-sqs": "^8.0.0",
+    "swagger-ui-express": "^5.0.1",
     "ts-jest": "^29.4.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2",
+    "yaml": "^2.8.1",
     "zod": "^4.0.17"
   },
   "pnpm": {
